# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import accountRouter from "./account";
 import assetsRouter from "./assets";
 import tradesRouter from "./trades";
 import withdrawalsRouter from "./withdrawals";
+import depositsRouter from "./deposits";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(accountRouter);
 router.use(assetsRouter);
 router.use(tradesRouter);
 router.use(withdrawalsRouter);
+router.use(depositsRouter);
 
 export default router;
