# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./accounts";
 export * from "./trades";
 export * from "./withdrawals";
+export * from "./deposits";
